--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
 :root{
-    --b-button: rgb(80, 123, 210);
+    --b-button: #2980B9;
 }
 
 *{
@@ -9,6 +9,7 @@
     padding: 0;
     box-sizing: border-box;
     border: none;
+    text-decoration: none;
 }
 
 /* nav */
@@ -29,7 +30,7 @@
     width: 100%;
     height: 100vh;
     /* background-image:url(../../public/couverture.jpg); */
-    background-image:linear-gradient(rgba(25, 58, 165, 0.4),rgba(19, 28, 146, 0.7)),url(../../public/couverture.jpg);
+    background-image:linear-gradient(to left,rgba(25, 58, 165, 0.4),rgba(19, 28, 146, 0.7)),url(../../public/couverture.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -156,12 +157,18 @@
 .acc-realiser h4{
     color: var(--b-button);
 }
+.part-partenaire{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: linear-gradient(to right bottom,rgba(113, 160, 203, 0.4),rgba(12, 59, 168, 0.7));
+}
 .partenaire{
-    height: 80%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: linear-gradient(to right bottom,rgba(113, 160, 203, 0.4),rgba(12, 59, 168, 0.7));
 }
 .partenaire-0{
     width: 30%;
@@ -169,15 +176,30 @@
 .partenaire-1{
     width: 50%;
 }
+.partenaire2{
+    width: 100%;
+}
+.parimg{
+    margin-left: 5%;
+}
 #acc-conc{
     margin-top: 10%;
 }
 .acc-conc{
     width: 35%;
     font-size: 13px;
+    margin-bottom: 20px;
+}
+.acc-conc h3{
+    color: var(--b-button);
 }
 .acc-conc1{
     width: 60%;
+}
+#typeEmailX{
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid white;
 }
 
 
@@ -197,11 +219,17 @@
 .card-text{
     width: 80%;
 }
+.card1  :hover{
+    width: 70vh;
+}
+.card2  :hover{
+    width: 70vh;
 
+}
 .span_title{
     font-size: 1.5rem;
     font-weight: bold;
-    color: blue;
+    color: rgb(74, 95, 189);
 }
 .d-1{
     width: 70%;
@@ -236,7 +264,101 @@
     .btn{
         width: 30%;
     }
+    /* Accueil */
+    .accueil-img{
+        width: 100%;
+        height: 100vh;
+        background-position: center;
+        background-repeat: no-repeat;
+        
+    }
+    #accueil h2{
+        font-size: 25px;
+    }
+    #accueil p{
+        font-size: 13px;
+    }
+    #accueil button{
+        width: 45%;
+        font-size: 12PX;
+    }
+    #text-center-ac h2{
+        font-size: 20px;
+    }
+    #text-center-ac{
+        font-size: 13px;
+    }
+    #Accueil{
+        flex-direction: column;
+        width: 100%;
+    }
+    .accueil-3{
+        width: 100%;
+        font-size: 13px;
+    }
+    .accueil-2{
+        height: 200%;
+    }
+    .accueil-4{
+        margin: 10%;
+        margin-left: 8%;
+    }
+    .acc-parr{
+        font-size: 20px;
+    }
+    .accT p{
+        font-size: 13px;
+    }
+    .acct-img{
+        display: none;
+    }
+    .accTem-2{
+        position: absolute;
+        left: 10%;
+        width: 70%;
+    }
+    .accTem-1{
+        height: 80%;
+    }
+    #acc-conc{
+        flex-direction: column;
+    }
+    .acc-conc{
+        width: 100%;
+    }
+    .acc-conc1{
+        width: 100%;
+    }
+    #dabout{
+        margin-top: 5%;
+    }
+    #about-img1{
+        width: 90%;
+    }
+    #formcom{
+        width: 100%;
+    }
+    .serv-img{
+        display: none;
+    }
+    .service-1 p{
+        width: 250%;
+    }
+    .card1{
+        flex-direction: column;
+        width: 100%;
+    }
+    .card2{
+        flex-direction: column;
+        width: 100%;
+    }
+    .mx-3{
+        padding-bottom: 8%;
+    }
+    
+
     .card {
+        margin: 0;
         width: 100%;
     }
     .card-title{
@@ -265,6 +387,13 @@
     #text-center{
         font-size: 15px;
     }
+    .partenaire{
+        flex-direction: column;
+        width: 100%;
+    }
+    .partenaire-0 , .partenaire-1{
+        width: 100%;
+    }
     }
 
 
@@ -283,6 +412,11 @@
     padding-top: 10px;
     width: 80%;
 }
+/* .modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
 
 /* contact */
 
@@ -297,7 +431,7 @@
 }
 .gradient-custom-2 {
     
-    background: rgb(75, 113, 227);
+    background: rgba(104, 127, 196,0.5);
     left: 50%;
     height: 140vh;
     /* Chrome 10-25, Safari 5.1-6 */
@@ -305,6 +439,10 @@
     
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     /* background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593); */
+    }
+    .coloTxt{
+        color: var(--b-button);
+        font-weight: bold;
     }
 .btn-primary{
     width: 100%;
@@ -321,7 +459,6 @@
     }
     }
 
-/*     background-image:linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.7)),url(org.jpg); */
 .section2{
     display: flex;
     justify-content: center;
@@ -336,7 +473,7 @@
     width: 95%;
     margin: auto;
     margin-top: 10%;
-    background-color: aqua;
+    background-color: rgb(152, 163, 212);
     border-radius: 13px;
 }
 .ser-par{
@@ -363,18 +500,183 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-direction: row;
+    
     margin-bottom: 25px;
 }
 .card2{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-direction: row;
+
 }
 .text-lg-start{
     background-color: var(--b-button);
 }
 .text-body{
     color: var(--b-button);
+}
+
+
+/* Section realisation */
+
+.container .rollers{
+    flex: 0 0 230px;
+}
+
+.container .start-roller{
+    left: 0;
+    top: 0;
+    background-image: linear-gradient(to right, white 30%, #ffffff00);
+}
+
+.container .start-roller,
+.container .end-roller{
+
+    height: 100%;
+    width: 40px;
+    position: absolute;
+    z-index: 1;
+}
+
+.container .end-roller{
+    right: 0;
+    top: 0;
+    background-image: linear-gradient(to left, white 30%, rgba(255, 255, 255, 0));
+}
+
+.container .rollers .wrapper{
+    position: relative;
+    width: 1400px;
+    height: 33vh;
+    margin: 0 0 20px 0;
+    flex: 0 0 auto;
+}
+
+.container .rollers .wrapper .items-container{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+
+.container .rollers .wrapper .items-container.roll-LL{
+    animation-name: roll;
+}
+.container .rollers .wrapper .items-container.roll-RL{
+    animation-name: roll-reverse;
+    left: 100%;
+}
+.container .rollers .wrapper .items-container.reverse-roll-LL{
+    animation-name: roll-clockwise;
+    left: -100%;
+}
+.container .rollers .wrapper .items-container.reverse-roll-RL{
+    animation-name: roll-reverse-clockwise;
+    left: 100%;
+}
+
+@keyframes roll {
+    0%{
+        left: 0%;
+    }
+    100%{
+        left: -100%;
+    }
+}
+@keyframes roll-reverse {
+    0%{
+        left: 100%;
+    }
+    100%{
+        left: 0%;
+    }
+}
+@keyframes roll-clockwise {
+    0%{
+        left: -100%;
+    }
+    100%{
+        left: 0%;
+    }
+}
+@keyframes roll-reverse-clockwise {
+    0%{
+        left: 0%;
+    }
+    100%{
+        left: 100%;
+    }
+}
+
+
+.container .rollers .wrapper .items-container .item{
+    flex: 1 1 200px;
+    min-width: 0;
+    margin: 20px;
+}
+
+.container .rollers .wrapper .items-container .item .company{
+    filter: grayscale(100%);
+    opacity: 0.2;
+    width: 100%;
+    object-fit: contain;
+}
+
+.container .rollers .wrapper .items-container .item .company:hover{
+    filter: grayscale(0%);
+    opacity: 1;
+    cursor: pointer;
+}
+
+.container img{
+    vertical-align: middle;
+}
+
+@media (max-width: 575.5px) {
+    .content{
+        padding: 20px;
+    }
+    .content .container{
+        padding: 20px;
+    }
+    .fs-5 {
+        font-size: 0.9rem!important;
+    }
+    .container .rollers .wrapper .items-container .item .company{
+        opacity: 0.4;
+    }
+    #gradient-custom-1{
+        width: 100%;
+    }
+    #sectioncont1{
+       position: absolute;
+       left: 0;
+       top: 130%;
+    }
+    .parimg{
+        height: 20%;
+        width: 15%;
+    }
+}
+
+
+/* Footer */
+#footer{
+    color: rgb(247, 243, 243);
+}
+.span_title1{
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+}
+#typeEmailX1{
+    background: none;
+    border: none;
+    border-bottom: 1px solid white;
+    border-radius: 0;
 }
