--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     border: none;
     text-decoration: none;
-}
+} 
 
 /* nav */
 .nav-res{
@@ -30,12 +30,12 @@
     width: 100%;
     height: 100vh;
     /* background-image:url(../../public/couverture.jpg); */
-    background-image:linear-gradient(to left,rgba(25, 58, 165, 0.4),rgba(19, 28, 146, 0.7)),url(../../public/couverture.jpg);
+    background:linear-gradient(to right, rgba(217, 79, 48,0.7), #FFFFFF);
     background-repeat: no-repeat;
     background-size: cover;
 }
 .btn1{
-    background-color: var(--b-button);
+    background-color: rgba(217, 79, 48);
     border-radius: 0;
     width: 30%;
     height: 45px;
@@ -53,12 +53,12 @@
     top: 30%;
 }
 #text-center-ac{
-    padding: 10%;
+    padding: 4%;
     width: 80%;
     margin: auto;
 }
 #text-center-ac h3{
-    color: var(--b-button);
+    color: rgba(217, 79, 48);
 }
 .title-style{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -71,15 +71,18 @@
     font-weight: 400;
     color: hsl(52, 0%, 98%);
     }
-.accueil-2{
-    background: linear-gradient(to right ,rgba(113, 160, 203, 0.4),rgba(12, 59, 168, 0.7));
-    height: 70rem;
+.bg-orange{
+    background: linear-gradient(to left ,rgba(217, 79, 48,0.2), #FFFFFF);
+}
+.icon-link{
+    color: rgba(217, 79, 48,0.7);
+    text-decoration: none;
 }
 .accueil-3{
     width: 45%;
 }
 .accueil-3 h3{
-    color: var(--b-button);
+    color:rgba(217, 79, 48);
 }
 .accueil-3 p{
     font-size: 15px;
@@ -111,18 +114,21 @@
 .card-img-top{
     width: 18rem
 }
+.text-orange{
+    color: rgba(217, 79, 48) !important;
+}
 .accT{
     width: 100%;
-    height: 180vh;
-    padding-top: 10%;
+    height: 110vh;
+    padding-top: 4%;
     padding-left: 75px;
-    background: linear-gradient(to right bottom,rgba(113, 160, 203, 0.4),rgba(12, 59, 168, 0.7));
+    background: linear-gradient(to left top,rgba(217, 79, 48,0.3), #FFFFFF);
 }
 .accTem-1{
-    position: relative;
+    /* position: relative; */
     height: 70%;
     width: 94%;
-    background: linear-gradient(to right bottom,rgba(123, 147, 169, 0.4),rgba(15, 18, 25, 0.7));
+    background: linear-gradient(to right bottom,rgba(123, 147, 169),rgba(15, 18, 25));
     border-radius: 40px;
 }
 .acct-img{
@@ -136,11 +142,7 @@
     border-radius: 24px;
 }
 .accTem-2{
-    position: absolute;
-    top: 15px;
-    left: 45%;
-    width: 50%;
-    padding-top: 25px;
+    
 }
 .accTem-2 P{
     font-size: 15px;
@@ -158,16 +160,12 @@
     color: var(--b-button);
 }
 .part-partenaire{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: linear-gradient(to right bottom,rgba(113, 160, 203, 0.4),rgba(12, 59, 168, 0.7));
+    height: auto;
+    background: linear-gradient(to right top,rgba(217, 79, 48,0.2), #FFFFFF);
 }
 .partenaire{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .partenaire-0{
@@ -179,22 +177,28 @@
 .partenaire2{
     width: 100%;
 }
-.parimg{
+/* .parimg{
     margin-left: 5%;
-}
+} */
 #acc-conc{
-    margin-top: 10%;
+    margin-top: 4%;
+    position: relative;
+    height: 63vh;
 }
 .acc-conc{
     width: 35%;
     font-size: 13px;
     margin-bottom: 20px;
+    margin-left: 5%;
 }
 .acc-conc h3{
     color: var(--b-button);
 }
 .acc-conc1{
     width: 60%;
+    position: absolute;
+    right: 0;
+    bottom: -50px;
 }
 #typeEmailX{
     background: transparent;
@@ -219,12 +223,45 @@
 .card-text{
     width: 80%;
 }
-.card1  :hover{
-    width: 70vh;
+.main-conteiner{
+    position: relative;
+    width: 25%;
 }
-.card2  :hover{
-    width: 70vh;
-
+.main-img{
+    display: block;
+    height: auto;
+}
+.overlay{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0,0.75);
+    overflow: hidden;
+    width: 117%;
+    height: 0;
+    transition: .5s ease; 
+}
+.main-conteiner:hover .overlay{
+    height: 100%;
+}
+.overlay h6{
+    width: 100%;
+    margin-top: 20%;
+    color: white;
+    font-size: 10px;
+    position: absolute;
+    text-align: center;
+    font-family: 'Damion', cursive;
+    transform: rotate(-5deg)skewX(-5deg);
+}
+.overlay h5{
+    text-align: center;
+    font-family: 'Damion', cursive;
+    transform: rotate(-5deg)skewX(-5deg);
+    color: white;
+    font-size: 0.7rem;
+    margin-top: 45%;
 }
 .span_title{
     font-size: 1.5rem;
@@ -240,9 +277,17 @@
 #dabout{
     margin-bottom: 10%;
 }
+.btn-orange {
+    background-color: rgba(217, 79, 48);
+    color: white;
+}
+.btn-orange:hover {
+    background-color: rgba(217, 79, 48,0.8);
+    color: white;
+}
 #formcom{
     width: 80%;
-    height: 80vh;
+    height: auto;
     margin: auto;
     padding: 9%;
 }
@@ -254,6 +299,21 @@
 }
 .divabout{
     margin-bottom: 20%;
+}
+@media screen and (max-width:1282px) {
+    .text{
+        font-size: smaller;
+    }
+    .acct-img{
+        display: none;
+    }
+    .accT{
+        height: auto;
+        padding-bottom: 5%;
+    }
+}
+@media screen and (min-width:501px) {
+    
 }
 
 @media screen and (max-width: 500px){
@@ -267,7 +327,7 @@
     /* Accueil */
     .accueil-img{
         width: 100%;
-        height: 100vh;
+        height: auto;
         background-position: center;
         background-repeat: no-repeat;
         
@@ -300,8 +360,8 @@
         height: 200%;
     }
     .accueil-4{
-        margin: 10%;
-        margin-left: 8%;
+        /* margin: 10%; */
+        /* margin-left: 8%; */
     }
     .acc-parr{
         font-size: 20px;
@@ -355,8 +415,9 @@
     .mx-3{
         padding-bottom: 8%;
     }
-    
-
+    .main-conteiner:hover .overlay{
+        height: 100%;
+    }
     .card {
         margin: 0;
         width: 100%;
@@ -510,7 +571,7 @@
 
 }
 .text-lg-start{
-    background-color: var(--b-button);
+    background-color: rgba(217, 79, 48);
 }
 .text-body{
     color: var(--b-button);
@@ -658,10 +719,10 @@
        left: 0;
        top: 130%;
     }
-    .parimg{
+    /* .parimg{
         height: 20%;
         width: 15%;
-    }
+    } */
 }
 
 
