--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,11 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.mb-50{
+    position: relative;
+    margin-bottom: -50px !important;
+    z-index: 100;
+}
 .btn1{
     background-color: rgba(217, 79, 48);
     border-radius: 0;
@@ -59,6 +64,9 @@
 }
 #text-center-ac h3{
     color: rgba(217, 79, 48);
+}
+.border-orange{
+    border: 2px solid rgba(217, 79, 48);
 }
 .title-style{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -163,6 +171,12 @@
     height: auto;
     background: linear-gradient(to right top,rgba(217, 79, 48,0.2), #FFFFFF);
 }
+.gradient-orange{
+    background: linear-gradient(to right top,rgba(217, 79, 48,0.3), #FFFFFF);
+}
+.gradient-orange-1{
+    background: rgba(217, 79, 48,0.2);
+}
 .partenaire{
     display: flex;
     justify-content: space-between;
@@ -180,6 +194,10 @@
 /* .parimg{
     margin-left: 5%;
 } */
+.pl-5 {
+    padding-left: 3rem;
+}
+
 #acc-conc{
     margin-top: 4%;
     position: relative;
@@ -212,10 +230,11 @@
     padding-left: 5%;
 }
 .card{
-    width: 58em;
-    height: 23rem;
+    width: 53em;
+    height: auto;
     margin-bottom: 10%;
-    background-color: var(--b-button);
+    padding-bottom: 4rem;
+    border: none !important;
 }
 .card-title{
     width: 80%;
@@ -230,6 +249,7 @@
 .main-img{
     display: block;
     height: auto;
+    object-fit: cover;
 }
 .overlay{
     position: absolute;
@@ -286,10 +306,9 @@
     color: white;
 }
 #formcom{
-    width: 80%;
+    width: 100%;
     height: auto;
     margin: auto;
-    padding: 9%;
 }
 #formcom button{
     width: 100%;
@@ -312,8 +331,11 @@
         padding-bottom: 5%;
     }
 }
-@media screen and (min-width:501px) {
-    
+@media screen and (min-width:501px) and (max-width:924px) {
+    .card {
+        margin-left: 0;
+        width:100%;
+    }
 }
 
 @media screen and (max-width: 500px){
@@ -419,7 +441,7 @@
         height: 100%;
     }
     .card {
-        margin: 0;
+        margin-left: 0;
         width: 100%;
     }
     .card-title{
