bien modifier les navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -556,7 +556,7 @@
     width: 95%;
     margin: auto;
     margin-top: 10%;
-    background-color: rgb(152, 163, 212);
+    background-color: rgba(217, 79, 48,0.4);
     border-radius: 13px;
 }
 .ser-par{
