--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -258,9 +258,8 @@
 .card-text{
     width: 80%;
 }
-.main-conteiner{
+.hoverContainer{
     position: relative;
-    width: 25%;
 }
 .main-img{
     display: block;
@@ -274,30 +273,22 @@
     right: 0;
     background-color: rgba(0,0,0,0.75);
     overflow: hidden;
-    width: 117%;
+    width: 100%;
     height: 0;
     transition: .5s ease; 
 }
-.main-conteiner:hover .overlay{
+.hoverContainer:hover .overlay{
     height: 100%;
 }
 .overlay h6{
-    width: 100%;
-    margin-top: 20%;
     color: white;
-    font-size: 10px;
-    position: absolute;
-    text-align: center;
-    font-family: 'Damion', cursive;
-    transform: rotate(-5deg)skewX(-5deg);
+    font-size: 15px;
+    padding: 10px;
 }
 .overlay h5{
     text-align: center;
-    font-family: 'Damion', cursive;
-    transform: rotate(-5deg)skewX(-5deg);
     color: white;
     font-size: 0.7rem;
-    margin-top: 45%;
 }
 .span_title{
     font-size: 1.5rem;
